# crypto-quant-system

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_QUALITY_IMPROVEMENTS_2026_01_08.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  DEPENDENCY_INSTALLATION_GUIDE.md  FEEDBACK_RESOLUTION_PLAN.md  GRADUAL_MIGRATION_COMPLETE.md  IMPROVEMENT_SUMMARY.md  LICENSE  MYPY_COMPLETE.md  Makefile  PHASE1_EXECUTION_GUIDE.md  PHASE_1_2_COMPLETION_REPORT.md  README.md  RESOLUTION_SUMMARY.md  ROADMAP.md  SECURITY.md  TECHNICAL_IMPLEMENTATION_ROADMAP.md  copy_screenshots.bat  docker-compose.dev.yml  docker-run-dev.bat  docker-run-dev.sh  noxfile.py  pyproject.toml  pyproject.toml.example  rename_screenshots.bat  rename_screenshots.ps1
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml
.streamlit/: config.toml
airflow/: docker-compose.yml
airflow/dags/: backtest_dag.py  data_collection_dag.py  feature_engineering_dag.py  model_retrain_dag.py
config/: monitoring.yaml.example  settings.yaml.example
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: date_utils.sql
dbt/tests/: positive_value.sql
deploy/: .dockerignore  Dockerfile  README.md  deploy.ps1  deploy.sh  docker-compose.yml
docs/: MYPY_USAGE.md  ORGANIZATION.md  PERFORMANCE_OPTIMIZATION.md  README.md  README_SPHINX.md  SCREENSHOT_INSTRUCTIONS.md  TYPE_CHECKING.md  architecture.md  conf.py  phase1-3-completion-summary.md  phase4-5-completion-summary.md  step4-realtime-monitoring.md  strategy-improvement-results.md
docs/api/: README.md  real_time_monitoring.md
docs/archive/: CODE_FORMATTING_SUMMARY.md  IMPROVEMENTS_APPLIED.md  LINTING_FIXES_SUMMARY.md  MIGRATION_SUMMARY.md  PHASE0_CHECKLIST.md  PHASE0_SUMMARY.md  PHASE1_1_COMPLETE.md  PHASE1_2_COMPLETE.md  PHASE1_3_COMPLETE.md  PHASE1_PROGRESS.md  PHASE2_1_COMPLETE.md  PHASE2_2_COMPLETE.md  PHASE2_2_INTEGRATION_COMPLETE.md  PHASE3_COMPLETE.md  PHASE5_1_COMPLETE.md  PHASE5_2_COMPLETE.md  PHASE6_1_COMPLETE.md  PHASE6_2_COMPLETE.md  PYPROJECT_MIGRATION.md  README.md  REFACTORING_PLAN.md  logic_error_summary.md
docs/guides/: README.md  V2_MIGRATION_GUIDE.md  backtester_modules.md  configuration.md  deprecation_guide.md  getting_started.md  simple_backtest_engine.md  strategy_customization.md
docs/images/: README.md
docs/maintenance/: CLEANUP_RECOMMENDATIONS.md  CLEANUP_SCRIPT.md  FILES_TO_DELETE.md  GITIGNORE_AUDIT.md  README.md
docs/monitoring/: README.md
docs/planning/: CONFIGURATION_STANDARD.md  COVERAGE_90_PERCENT_PLAN.md  COVERAGE_PROGRESS.md  README.md  TEST_COVERAGE_PLAN.md  comparison_legacy_vs_new_bot.md
docs/portfolio/: BOT_MERGE_ANALYSIS.md  IMPROVEMENT_ROADMAP.md  INITIAL_COMMIT_GUIDE.md  PORTFOLIO_CHECKLIST.md  PORTFOLIO_PUBLICATION_GUIDE.md  PORTFOLIO_PUBLICATION_PLAN.md  PRE_COMMIT_STATUS.md  PUBLICATION_CHECKLIST.md  README.md
docs/refactoring/: MODERN_PYTHON_STANDARDS_MIGRATION.md  README.md  REFACTORING_PROGRESS_2025.md  REFACTORING_SUMMARY.md  STANDARDS_COMPLIANCE_REPORT.md  backtester_restructuring_plan.md
examples/: README.md  live_trading.py  orb_backtest.py  performance_analysis.py  performance_benchmark.py  strategy_comparison.py
feature_store/: README.md  feature_repo.py  feature_store.yaml  features.py
legacy/: bot.py  bt.py  requirements.txt
monitoring/: README.md  docker-compose.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: prometheus.yml
notebooks/: 01_vbo.ipynb  02_strategy_experiments.ipynb
notebooks/experiments/: README.md
reports/: monitoring_summary.txt  phase3_reliability_summary.txt
reports/phase1/: 01_wfa_report.html  02_robustness_results.csv  03_permutation_result.txt
scripts/: README.md  check_task_scheduler.ps1  collect_30min_data.py  compare_engines.py  convert_csv_to_parquet.py  crop_screenshots.py  debug_bootstrap.py  debug_orb_signals.py  fetch_data.py  generate_sample_data.py  real_time_monitor.py  run_phase1_overfitting_detection.py  run_phase1_real_data.py  run_phase1_revalidation.py  run_phase1_simple.py  run_phase2_integration.py  run_phase3_statistical_reliability.py  run_phase4_monitoring.py  setup_task_scheduler.ps1  setup_task_scheduler.py  test_bootstrap_stability.py  test_orb_simple_engine.py  test_orb_single.py  test_sl_tp.py
scripts/archive/: bot.py  debug_bootstrap.py  run_phase1_overfitting_detection.py  run_phase1_real_data.py  run_phase1_revalidation.py  run_phase1_simple.py  run_phase3_statistical_reliability.py  test_bootstrap_stability.py
scripts/backtest/: README.md  btc_market_filter_backtest.py  legacy_bt_with_trades.py  run_backtest.py  run_backtest_examples.py  run_bt_vbo_backtest.py
scripts/data/: README.md  data_collector.py
scripts/reports/: engine_trades.csv
scripts/tools/: README.md  check_logic_errors.py  check_strategy_logic_consistency.py  compare_metrics.py  compare_trades.py  verify_strategy_logic.py  verify_strategy_logic_detailed.py
src/: __init__.py  __version__.py  main.py
src/backtester/: __init__.py  bootstrap_analysis.py  engine.py  html_report.py  metrics.py  metrics_helpers.py  models.py  monte_carlo.py  optimization.py  optimization_models.py  optimization_search.py  parallel.py  parallel_utils.py  permutation_test.py  portfolio_backtest.py  report.py  robustness_analysis.py  slippage_model_v2.py  trade_cost_calculator.py  trade_cost_models.py  walk_forward.py  walk_forward_auto.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  constants.py  loader.py  loader_getters.py  loader_parsers.py  settings.py
src/data/: __init__.py  base.py  cache.py  collector.py  collector_factory.py  collector_fetch.py  converters.py  storage.py  upbit_source.py  upbit_source_utils.py
src/exceptions/: __init__.py  base.py  data.py  exchange.py  order.py  strategy.py
src/exchange/: __init__.py  base.py  factory.py  protocols.py  types.py  upbit.py  upbit_orders.py
src/execution/: __init__.py  bot.py  events.py  (+11 more)
tests/: __init__.py  conftest.py
(+287 files in other folders)
