[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-quant-system"
version = "0.1.0"
description = "Automated trading system for multiple cryptocurrency exchanges using volatility breakout strategy"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "Crypto Quant System"}
]
keywords = ["trading", "cryptocurrency", "quantitative", "backtesting", "exchange"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
]

# 프로덕션 의존성
dependencies = [
    "click>=8.1.0",  # CLI framework
    "pyupbit>=0.2.34",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",  # Portfolio optimization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyarrow>=12.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",  # .env file support
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",  # Type-safe environment variable management
    "psutil>=5.9.0",  # Process and system utilities
]

# CLI 진입점
[project.scripts]
crypto-quant = "src.cli.main:main"

# 선택적 의존성 그룹
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
    "nox>=2025.11.12",
    # Type stubs for external libraries
    "pandas-stubs>=2.0.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
    "types-psutil>=5.9.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "ipywidgets>=8.1.0",
]

# 패키지 구조 설정
[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# Ruff 포맷터 설정
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy 설정
[tool.mypy]
# Nox 세션 환경과 동일하게 3.14로 설정
python_version = "3.14"

# 검사 제외 대상 설정 (build 폴더 충돌 방지)
exclude = ["build/", "dist/", ".venv/", "node_modules/", "legacy/"]

# 엄격한 검사 관련 (Phase 2 전환 시 true로 변경 권장)
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

# 기본 검사 및 경고 설정
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
show_error_codes = true

# 모듈 탐색 관련
ignore_missing_imports = true
incremental = false

# 라이브러리별 예외 설정 (쉼표로 구분된 문자열 사용)
[[tool.mypy.overrides]]
module = "pyupbit.*,pyarrow.*,pydantic.*,pydantic_settings.*,pandas.*,numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# 테스트 코드는 타입 체크를 조금 더 느슨하게 설정 가능
disable_error_code = ["method-assign", "attr-defined", "name-defined", "var-annotated", "misc", "arg-type", "index"]

# Ignore dynamic, visualization-heavy or pandas-index heavy modules in src
[[tool.mypy.overrides]]
module = [
    "src.backtester.engine",
    "src.backtester.report",
    "src.backtester.html_report",
    "src.utils.indicators",
    "src.data.collector",
    "src.data.cache",
    "src.data.upbit_source",
]
ignore_errors = true

# Ruff 설정 (린터 + 포맷터)
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports allowed in __init__.py
"*.ipynb" = ["E402"]  # notebooks have special import patterns
"legacy/*" = ["E722", "SIM105", "N806"]  # legacy code - allow bare except and naming
"scripts/tools/*" = ["E402", "F841"]  # scripts have special import patterns
"scripts/backtest/*" = ["C414", "N806"]  # legacy scripts

# Pytest 설정
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# Coverage 설정
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
# Coverage threshold (will be enabled gradually)
fail_under = 80  # Portfolio target: 80%+ coverage
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
